--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,12 +44,22 @@ services:
             test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
             retries: 3
             timeout: 5s
-
-# ACA PEGO
-
-
+    # ACA PEGO
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin:5
+        ports:
+            - 8090:80
+        links:
+            - mysql
+        environment:
+            PMA_HOST: mysql
+            PMA_PORT: 3306
+        depends_on:
+            mysql:
+                condition: service_healthy
+        networks:
+            - sail
 # HASTA ACA
-
 networks:
     sail:
         driver: bridge
